--- a/index.html
+++ b/index.html
@@ -4,8 +4,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio website</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7859f78b71.js" crossorigin="anonymous"></script>
 </head>
 <body>
+   <div id="header">
+       <div class="container">
+          <nav>
+            <img src="https://img.freepik.com/free-vector/colorful-letter-c-icon-logo-design_474888-2878.jpg?ga=GA1.1.28600801.1740815508&semt=ais_hybrid" alt="" class="logo">
+            <ul id="sidemenu">
+             <li><a href="#header" class="nav-link" data-content="header">Home</a></li>
+             <li><a href="#about" class="nav-link" data-content="about">About</a></li>
+             <li><a href="#services"class="nav-link" data-content="services">Services</a></li>
+             <li><a href="#contact"class="nav-link" data-content="contact">Contact</a></li> 
+             <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
+            </ul>
+            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+          </nav>
+          <div class="header-text">
+            <div class="hello">
+             <p>Full-Stack Web developer</p>
+            <h1>Hello, I'm <span>Collins Muriuki</span></h1>
+            <span class="intro">Turning Ideas into Interactive Digital Experiences</span><br>
+            <span class="intro">Let's Build Something Amazing Together</span>
+            </div>
+            
+            <div class="dev">
+                <img src="https://imgs.search.brave.com/cxlsrSOl_ESNvgke3V4XEJdmIxzRa0QrpOiMXeolYPM/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/cHJlbWl1bS1waG90/by9nYW1lLWRldmVs/b3Blcl8xMTkwOTU5/LTE4NzMuanBnP3Nl/bXQ9YWlzX2h5YnJp/ZA" alt="">
+            </div>
+          </div>
+   </div>
+   <!-- About -->
+   <div id="about">
+       <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="Images/Dev.jpg" alt="Developer image">
+            </div>
+            <div class="about-col-2">
+                <h1 class="sub-title">About Me</h1>
+                <p class="description">
+                    My name is Collins Muriuki, and I am a passionate software engineer with a strong foundation in the field. 
+                    I hold a diploma in Software Engineering, which has equipped me with essential technical skills and knowledge. Currently, 
+                    I am furthering my education by pursuing a comprehensive software engineering course at Moringa School, where I am refining my expertise and working on building impactful solutions.
+                     I am committed to continuous learning and growth in the tech industry and am excited to apply my skills to real-world challenges.
+                </p>
+            </div>
+        </div>
+       </div>
+   </div>
+   <!-- Services -->
+<div id="services">
+    <div class="container">
+      <h1 class="sub-title">My Services</h1>
+      <div class="services-list">
+        <div>
+            <i class="fa-solid fa-code"></i>
+          <h2>Front-End Web Development</h2>
+          <ul>
+            <li>
+              Using modern technologies like HTML, CSS, and JavaScript to create intuitive and interactive user interfaces.
+            </li>
+            <li>
+              <strong>Responsive Web Design:</strong> I create websites that adapt seamlessly to different screen sizes, whether on desktop, tablet, or mobile devices. The goal is to ensure that users enjoy an optimal viewing experience no matter what device they use.
+            </li>
+            <li>
+              <strong>Interactive Web Elements:</strong> I enhance user interaction by implementing dynamic features like forms, buttons, animations, and real-time updates using JavaScript and frameworks like React.js.
+            </li>
+          </ul>
+        </div>
+        <div> 
+            <i class="fa-solid fa-code"></i>
+          <h2>Back-End Web Development</h2>
+          <ul>
+            <li>
+              Developing robust and scalable server-side solutions with languages like Python, Node.js, and PHP to ensure smooth performance.
+            </li>
+            <li>
+              <strong>Authentication and Security:</strong> I implement secure user authentication systems (e.g., login, registration, password management) and ensure that sensitive data is protected using encryption and best security practices. This helps safeguard against data breaches and ensures the safety of your users.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--- Contact-->
+  <div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-envelope"></i>contact@example.com</p>
+                <p><i class="fa-solid fa-phone"></i>0790760367</p>
+                </div>
+                <div class="social-icons">
+                   <a href="https://github.com/account"><i class="fa-brands fa-github"></i></a> 
+                   <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a> 
+                   <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a> 
+                </div>
+            <div class="contact-right">
+               <form action="">
+                <input type="text" name="Name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+              <button type="submit" class="btn btn2">Submit</button>
+            </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>© 2025 Collins Muriuki. All rights reserved.
+
+        </p>
+    </div>
+  </div>
+<script>
+  var sidemenu = document.getElementById("sidemenu");
+  function openmenu() {
+    sidemenu.style.right = "0";
+  }  
+  function closemenu() {
+    sidemenu.style.right = "-200px";
+  }  
+</script>
+<script>
     
+</script>
 </body>
 </html>
